# servicebusexplorer

./: .gitignore  AGENTS.md  APPLE_SIGNING_SETUP.md  APP_STORE_SUBMISSION.md  BUILD.md  MACOS_SIGNING_GUIDE.md  PRIVACY_POLICY.md  README.md  STOREKIT_IMPLEMENTATION.md  TESTING_LICENSE.md  package-lock.json  package.json  start-server.js  tailwind.config.ts  tsconfig.json
.github/workflows/: build-desktop-simple.yml  build-desktop.yml
scripts/: build-appstore.sh  build-with-xcode-signing.sh  build-with-xcode.sh  bundle-nodejs.sh  check-xcode-icon.sh  configure-xcode-for-tauri-icon.sh  create-appicon-asset.sh  generate-icns.sh  prepare-xcode-icons.sh  reset-trial.js  verify-icns.sh  xcode-build-script.sh
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  Requirements.plist  TEST_PEEK_README.md  build.rs  tauri.appstore.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  storekit.rs
src-tauri/src/azure/: auth.rs  mod.rs  servicebus.rs  types.rs
src-tauri/src/keychain/: fallback.rs  macos.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/[connectionName]/queues/: page.tsx
src/app/[connectionName]/topics/: page.tsx
src/app/api/queues/: route.ts
src/app/queues/: page.tsx
src/app/topics/: page.tsx
src/components/connections/: ConnectionForm.tsx  ConnectionManager.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/license/: LicenseGate.tsx  LicenseTestHelper.tsx  PurchaseDialog.tsx  TrialBanner.tsx
src/components/messages/: MessageCard.tsx  MessageEditor.tsx  MessageList.tsx  MessageTable.tsx  MessageViewer.tsx
src/components/queues/: InlineMessageViewer.tsx  QueueCard.tsx  QueueDetails.tsx  QueueList.tsx  QueueMessagesPanel.tsx  QueueSettingsForm.tsx  QueueTable.tsx
src/components/topics/: SubscriptionList.tsx  SubscriptionMessagesPanel.tsx  SubscriptionSettingsForm.tsx  TopicCard.tsx  TopicDetails.tsx  TopicList.tsx  TopicSettingsForm.tsx  TopicTable.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  collapsible.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx  tree.tsx
src/contexts/: ConnectionsContext.tsx  DemoModeContext.tsx  LicenseContext.tsx  SelectedResourceContext.tsx  TreeRefreshContext.tsx
src/hooks/: useConnections.ts  useLicense.ts  useMessages.ts  useQueues.ts  useTopics.ts  useTreeData.ts
src/lib/: utils.ts
src/lib/api/: client.ts
src/lib/azure/: connectionManager.ts  serviceBusClient.ts
src/lib/demo/: mockData.ts
src/lib/storage/: connectionPreferences.ts  connections.ts  license-test-helper.ts  license.ts  preferences.ts
src/types/: azure.ts
(+13 files in other folders)
