[package]
name = "servicebusexplorer"
version = "0.1.0"
description = "Azure Service Bus Explorer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
objc = "0.2"
core-foundation = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"

