[package]
name = "servicebusexplorer"
version = "0.1.0"
description = "Azure Service Bus Explorer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
default-run = "servicebusexplorer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-keyring = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
objc = "0.2"
core-foundation = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = { version = "0.22", features = ["default"] }
tokio = { version = "1", features = ["full"] }
azure_core = "0.19"
azure_identity = "0.19"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
url = "2.5"
regex = "1.10"
urlencoding = "2.1"
serde-xml-rs = "0.6"
azservicebus = "0.25"

# Main app binary (default)
[[bin]]
name = "servicebusexplorer"
path = "src/main.rs"

# Test binary for debugging peek functionality
[[bin]]
name = "test-peek"
path = "src/bin/test-peek.rs"

# Test binary for debugging queue creation
[[bin]]
name = "test-create-queue"
path = "src/bin/test-create-queue.rs"

[profile.release]
# Include debug symbols for Xcode dSYM generation
debug = true

